cmake_minimum_required(VERSION 3.13)
set(proj_name protobuftest)
project(${proj_name} CXX)
set(CMAKE_CXX_STANDARD 17)

find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS user.proto)
# protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS EXPORT_MACRO DLL_EXPORT foo.proto)
#protobuf_generate_python(PROTO_PY foo.proto)
add_executable(${proj_name} main.cc ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(${proj_name} ${Protobuf_LIBRARIES})
